# MAE5032_FinalProject

./: .gitignore  README.md  Report_on_math.md  report.md
TaiYi_Material/: 3826675-petsc.err  3826675-petsc.out  3826699-petsc.out  3829006-petsc.out  ty_ksppc  ty_parallelism  ty_test01
bak/: explicit_a.c  数值传热问题.md
bak/ball/: explicit.c  explicit.h  generator.c  implicit.c  main.c  main.out  plicit.h  u_t_output.hdf5
bak/base_test/: a.out  main.c
bak/generator/: main.c  main.out  test.hdf5
bak/generator_all/: Makefile  input.hdf5  main.c  main.out
bak/generator_fixed/: Makefile  default.hdf5  main.c  main.out
bak/generator_random/: g_random.hdf5  main.c
bak/hdf5_test/: g_fixed.hdf5  main.c  main.out
bak/method/: Makefile  explicit.c  explicit_a.c
bak/read/: main.c  main.out
bak/sln_explicit/: g_fixed.hdf5  input.hdf5  main.c  main.out  u_t_output.hdf5
bak/sln_explicit/TAIYI/: 3819511-petsc.err  3819511-petsc.out  3820156-petsc.err  3820156-petsc.out  ty_script
bak/sln_implicit/: main.c
bak/test/: main.c  main.out
bak/test_group/: h5dump.txt  main.c  main.out  test.h5
bak/test_m/: main.c  main.out
ball/: default.hdf5  explicit.c  generator.c  main.c  main.out  plicit.h
data/: default.hdf5  implicit_test.hdf5  test01.hdf5  test01_ex.hdf5  test01_im.hdf5
doc/: MAE5032_Report.md  Report_on_math.md  数值传热问题.md
recycle/generator_all/: main.c  main.out
recycle/generator_fixed/: default.hdf5  h_fixed.hdf5  main.c  main.out
recycle/generator_random/: g_and_h_random.hdf5  h_random.hdf5  main.c  main.out
recycle/read_outdated/: main.c  test.hdf5
recycle/sln_explicit/: Makefile  main.c  main.out  xx
recycle/sln_implicit/: input.hdf5  main.out
recycle/test/: H5R.c  H5W.c  test.h5
recycle/test_group/: main.out  test.h5
src/: CMakeLists.txt  Vtk4hdf5.cpp  explicit.c  generator.c  implicit.c  main.out
src_bak/: 3828499-petsc.err  3828499-petsc.out  HTS2D  Makefile  explicit.c  generator.c  implicit.c  plicit.h  ty_test01
visualization/: CMakeLists.txt  Vtk4hdf5.cpp  Vtk4hdf5_ElevationFilter.cpp  default.hdf5
visualization/ElevationFilter/: CMakeLists.txt  TEST.out  Vtk4hdf5_ElevationFilter.cpp  Vtk4hdf5_ElevationFilter_Animation.cpp  Vtk4hdf5_ElevationFilter_MultiFiles.cpp  Vtk4hdf5_ElevationFilter_animation_Failed.cpp  Vtk4hdf5_ElevationFilter_oneFile.cpp  ty_script
visualization/ElevationFilter/exampleBuild/: .AVI_TEST.log.swp  CMakeCache.txt  Makefile  TEST.err  TEST.out  cmake_install.cmake  ty_script  vtk_AVI
visualization/ElevationFilter/output/: EleFilter_t1.vtp  EleFilter_t10.vtp  EleFilter_t100.vtp  EleFilter_t11.vtp  EleFilter_t12.vtp  EleFilter_t13.vtp  EleFilter_t14.vtp  EleFilter_t15.vtp  EleFilter_t16.vtp  EleFilter_t17.vtp  EleFilter_t18.vtp  EleFilter_t19.vtp  EleFilter_t2.vtp  EleFilter_t20.vtp  EleFilter_t21.vtp  EleFilter_t22.vtp  EleFilter_t23.vtp  EleFilter_t24.vtp  EleFilter_t25.vtp  EleFilter_t26.vtp  EleFilter_t27.vtp  EleFilter_t28.vtp  EleFilter_t29.vtp  EleFilter_t3.vtp  EleFilter_t30.vtp  EleFilter_t31.vtp  EleFilter_t32.vtp  EleFilter_t33.vtp  EleFilter_t34.vtp  EleFilter_t35.vtp  EleFilter_t36.vtp  EleFilter_t37.vtp  EleFilter_t38.vtp  EleFilter_t39.vtp  EleFilter_t4.vtp  EleFilter_t40.vtp  EleFilter_t41.vtp  EleFilter_t42.vtp  EleFilter_t43.vtp  EleFilter_t44.vtp  (+60 more)
visualization/ElevationFilter/testBuild_notTOUCHit/: CMakeCache.txt  Makefile  TEST.err  cmake_install.cmake  vtk_AVI
visualization/StructuredGrid/: CMakeLists.txt  SGexample.cpp  TEST.out  Vtk4hdf5_StruGrid_MultiLayers.cpp  Vtk4hdf5_StruGrid_oneLayer.cpp  ty_script
visualization/StructuredGrid/output/: StruGrid_t1.vts  StruGrid_t10.vts  StruGrid_t100.vts  StruGrid_t11.vts  StruGrid_t12.vts  StruGrid_t13.vts  StruGrid_t14.vts  StruGrid_t15.vts  StruGrid_t16.vts  StruGrid_t17.vts  StruGrid_t18.vts  StruGrid_t19.vts  StruGrid_t2.vts  StruGrid_t20.vts  StruGrid_t21.vts  StruGrid_t22.vts  StruGrid_t23.vts  StruGrid_t24.vts  StruGrid_t25.vts  StruGrid_t26.vts  StruGrid_t27.vts  StruGrid_t28.vts  StruGrid_t29.vts  StruGrid_t3.vts  StruGrid_t30.vts  StruGrid_t31.vts  StruGrid_t32.vts  StruGrid_t33.vts  StruGrid_t34.vts  StruGrid_t35.vts  StruGrid_t36.vts  StruGrid_t37.vts  StruGrid_t38.vts  StruGrid_t39.vts  StruGrid_t4.vts  StruGrid_t40.vts  StruGrid_t41.vts  StruGrid_t42.vts  StruGrid_t43.vts  StruGrid_t44.vts  (+161 more)
